<resources>
    <string name="rs">\u20B9</string>
    <string name="ruypz_fintech_pvt_ltd">Rupyz Fintech Pvt Ltd</string>
    <string name="check_score">Check Score</string>
    <string name="missed_repayments">Missed Repayments</string>
    <string name="orders_list">Orders List</string>
    <string name="all_order">All Order</string>
    <string name="clear"><u>Clear</u></string>
    <string name="create_date">Created Date</string>
    <string name="update_status">Update Status</string>
    <string name="overview_one_title">India’s First credit &amp; Loan management Platform for business</string>
    <string name="overview_one_heading_one">Check business score and Analyze reports</string>
    <string name="overview_one_heading_two">Get Alerts and Recommended actions for errors that negatively impact your score </string>
    <string name="overview_one_heading_three">AI enabled credit profile for loan management </string>
    <string name="overview_one_heading_four">Personalised suggestion on improving score &amp; credibility</string>
    <string name="overview_two_title">Why rupyz?</string>
    <string name="overview_two_heading_one">Data encryption and Security</string>
    <string name="overview_two_heading_two">No Spam, No Ads</string>
    <string name="overview_two_heading_three">No unsolicited messages and offers</string>
    <string name="overview_two_heading_four">Only explicit app permission</string>
    <string name="share_text">Check your business &amp; personal credit score on Rupyz app for free. Checking score on Rupyz will not affect your score.</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_alert">Alert</string>
    <string name="bottom_nav_learn">Learn</string>
    <string name="bottom_nav_debt_profile">Loan Summary</string>
    <string name="bottom_nav_my_network">My Network</string>
    <string name="bottom_nav_menu">Settings</string>
    <string name="bottom_nav_my_business">My Business</string>
    <string name="bottom_nav_post">Post</string>
    <string name="loan_summary">Loan Summary</string>
    <string name="bottom_nav_more">More</string>
    <string name="personal_loans">Personal Loans</string>
    <string name="housing_loan">Housing Loan</string>
    <string name="auto_loans">Auto Loans</string>
    <string name="secured_loan">SECURED LOAN</string>
    <string name="unsecured_loan">UNSECURED LOAN</string>
    <string name="working_capital">Working Capital</string>
    <string name="term_loans">Term loans</string>
    <string name="others">Others</string>
    <string name="forex">Forex</string>
    <string name="non_fund_based">Non fund based</string>
    <string name="high_risk">High Risk</string>
    <string name="very_high_risk">Very High Risk</string>
    <string name="very_low_risk">Very Low Risk</string>
    <string name="low_risk">Low Risk</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="npa_dps">DPD</string>
    <string name="npa_sma">SMA</string>
    <string name="npa_loss">Loss</string>
    <string name="npa_doubtful">Doubtful</string>
    <string name="npa_sub_standard">Sub Standard</string>
    <string name="ownership_mix_individual">Individual</string>
    <string name="ownership_mix_joint_guarantor">Joint/Guarantor</string>
    <string name="equifax_nbfc">NBFC</string>
    <string name="equifax_psu_bank">PSU Bank</string>
    <string name="equifax_private_bank">Private Bank</string>
    <string name="equifax_others">Others</string>
    <string name="splash_title">India\'s First Credit Building App For Business</string>
    <string name="made_in_india">Made in India with </string>
    <string name="select_account_type">Select Account Type</string>
    <string name="individual">Individual</string>
    <string name="proprietor">Proprietorship Firm</string>
    <string name="firm">Partnership Firm</string>
    <string name="limited">Limited Liability Partnership(LLP)</string>
    <string name="private_limited">Private/Public Limited</string>
    <string name="COMPANY">COMPANY</string>
    <string name="INDIVIDUAL">INDIVIDUAL</string>
    <string name="PROPRIETOR">PROPRIETOR</string>
    <string name="PARTNERSHIP_FIRM">PARTNERSHIP_FIRM</string>
    <string name="LLP">LLP</string>
    <string name="enter_phone_number_email">Enter Mobile Number</string>
    <string name="linked_to_your_latest_loan_account">Linked to your latest loan/bank account</string>
    <string name="login_with_mobile_desc"></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sales_mobile_number">Mobile Number <font fgcolor='#ef5350'>*</font></string>
    <string name="terms">By continuing, you have to agree Rupyz</string>
    <string name="experian_consent">You hereby consent to RUPYZ.COM being appointed as your authorised representative to receive your Credit Information on an ongoing basis until the purpose of educating you of your own credit history, providing credit management services/advisory and data analytics services to you, curating personalized credit offers and facilitating the same to you (“End Use Purpose”) is satisfied or expiry of 6 months from date the consent is collected; whichever is earlier.</string>
    <string name="equifax_consent">You hereby consent to RUPYZ.COM being appointed as your authorised representative to receive your Credit Information from Equifax for the purpose of educating you of your own credit history, providing credit management services/advisory and data analytics services to you, curating personalized credit offers and facilitating the same to you (“End Use Purpose”).</string>
    <string name="rupyz_terms"><u>Terms of Service</u></string>
    <string name="experian_consent_model"><u>Experian Consent</u></string>
    <string name="equifax_consent_model"><u>Equifax Consent</u></string>
    <string name="experian_consent_model_text">BY EXECUTING THIS AGREEMENT / CONSENT FORM, YOU ARE EXPRESSLY AGREEING TO ACCESS THE EXPERIAN CREDIT INFORMATION REPORT AND CREDIT SCORE, AGGREGATE SCORES, INFERENCES, REFERENCES AND DETAILS (AS DEFINED BELOW)(TOGETHER REFERRED AS “CREDIT INFORMATION”). YOU HEREBY ALSO IRREVOCABLY AND UNCONDITIONALLY CONSENT TO SUCH CREDIT INFORMATION BEING PROVIDED BY EXPERIAN TO YOU AND RUPYZ.COM BY USING EXPERIAN TOOLS, ALGORITHMS AND DEVICES AND YOU HEREBY AGREE, ACKNOWLEDGE AND ACCEPT THE TERMS AND CONDITIONS SET FORTH HEREIN. Information Collection, Use, Confidentiality, No-Disclosure and Data Purging RUPYZ.COM shall access your Credit Information as your authorized representative and RUPYZ.COM shall use the Credit Information for limited End Use Purpose consisting of and in relation to the services proposed to be availed by you from RUPYZ.COM. We shall not aggregate, retain, store, copy, reproduce, republish, upload, post, transmit, sell or rent the Credit Information to any other person and the same cannot be copied or reproduced other than as agreed herein and in furtherance to CICRA. The Parties agree to protect and keep confidential the Credit Information both online and offline. The Credit Information shared by you, or received on by us on your behalf shall be destroyed, purged, erased promptly within 1 (one) Business Day of upon the completion of the transaction/ End Use Purpose for which the Credit Information report was procured. Governing Law and Jurisdiction The relationship between you and RUPYZ.COM shall be governed by laws of India and all claims or disputes arising there from shall be subject to the exclusive jurisdiction of the courts of Mumbai. Definitions: Capitalised terms used herein but not defined above shall have the following meanings: “Business Day” means a day (other than a public holiday) on which banks are open for general business in Mumbai. “Credit Information Report” means the credit information / scores/ aggregates / variables / inferences or reports which shall be generated by Experian; “Credit Score” means the score which shall be mentioned on the Credit Information Report which shall be computed by Experian. “CICRA” shall mean the Credit Information Companies (Regulation) Act, 2005 read with the Credit Information Companies Rules, 2006 and the Credit Information Companies Regulations, 2006, and shall include any other rules and regulations prescribed thereunder.</string>
    <string name="rupyz_policy"><u>Privacy Policy</u></string>
    <string name="whatsapp_consent">Get notifications on whatsapp</string>
    <string name="whatsapp_consent_order">Get notifications on whatsapp for all your order details</string>
    <string name="login_with_mobile_button_continue">Continue</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="sent_to">Sent to +91 </string>
    <string name="go_back"><u>Go Back</u></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="otp_verify_button_continue">Continue</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="seconds">Seconds</string>
    <string name="creating_customer">Creating Customer</string>
    <string name="enter_pan_number">Enter PAN Number</string>
    <string name="pan">PAN<font fgcolor='#ef5350'>*</font></string>
    <string name="pan_without_star">PAN</string>
    <string name="next">next</string>
    <string name="masked_email">Enter your Email address corresponding to</string>
    <string name="masked_mobile">Enter your Mobile Number corresponding to</string>
    <string name="select_gst_number">GST Details</string>
    <string name="select_review">Review</string>
    <string name="isRequiredMessage">%s is required</string>
    <string name="mobile_number_validation">Valid Mobile Number Required</string>
    <string name="terms_conditions_validation">Please accept terms and conditions</string>
    <string name="experian_consent_validation">Please accept experian consent</string>
    <string name="equifax_consent_validation">Please accept equifax consent</string>
    <string name="overdue_message">There are no account with overdue.</string>
    <string name="repayment_message">There are no account with missed repayment.</string>
    <string name="default_message">There are no account with defaults &amp; negative.</string>
    <string name="good">Good</string>
    <string name="poor">Poor</string>
    <string name="average">Average</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate</string>
    <string name="nav_terms_condition">Terms &amp; Conditions</string>
    <string name="nav_logout">Logout</string>
    <string name="share">Share</string>
    <string name="debt_profile">Loan Summary</string>
    <string name="remove_connection">Remove Connection</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_request">Cancel request</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="order_details">Order Details</string>
    <string name="filters">Filters</string>
    <string name="report_filter">For which period do you need a report?</string>
    <string name="select_custom_date">Select a custom date of your choice</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="proceed">Proceed</string>
    <string name="create_shipment">Create shipment</string>
    <string name="select_all_product">Select All Product</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="do_you_want_to_carry_remaining_order"><font fgcolor='#ef5350'>*</font> Do you want to carry remaining order</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>