<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_app"
        android:title="@string/share_app"
        app:cnb_iconColor="#908AD9" />

    <item
        android:id="@+id/rate_app"
        android:title="@string/rate_app"
        app:cnb_iconColor="#908AD9" />


    <item
        android:id="@+id/terms_condition"
        android:title="@string/terms_amp_conditions"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/privacy_policy"
        android:title="@string/privacy_policy"
        app:cnb_iconColor="@color/white" />

    <item
        android:id="@+id/log_out"
        android:title="@string/nav_logout"
        app:cnb_iconColor="@color/white" />

</menu>