<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/nav_ic_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/nav_ic_share"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@mipmap/nav_ic_rate"
            android:title="@string/nav_rate" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@mipmap/nav_ic_terms"
            android:title="@string/nav_terms_condition" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/nav_ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>