<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_connection"
        app:showAsAction="always"
        android:icon="@drawable/ic_video_share"
        android:title="@string/share" />

    <item
        android:id="@+id/remove_connection"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        android:title="@string/remove_connection" />

    <item
        android:id="@+id/cancel_request"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        android:title="@string/cancel_request" />

    <item
        android:id="@+id/cancel"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"
        android:title="@string/cancel" />

</menu>