<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="35dp"
        android:padding="@dimen/size_16sp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/hd_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/filters"
        android:textColor="@color/black"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="#E5E5E5"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/hd_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/size_24sp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/report_filter"
        android:textColor="@color/filter_heading_color"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_filter_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        app:layout_constraintTop_toBottomOf="@+id/hd_filter" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/size_16sp"
        android:layout_marginEnd="@dimen/dimen_40dp"
        android:background="#E5E5E5"
        app:layout_constraintTop_toBottomOf="@+id/rv_filter_row" />

    <TextView
        android:id="@+id/hd_custom_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:layout_marginTop="@dimen/size_24sp"
        android:visibility="gone"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/select_custom_date"
        android:textColor="@color/filter_heading_color"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:drawableStart="@drawable/ic_date_filter"
        android:drawablePadding="@dimen/dimen_12dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_30dp"
        android:text="@string/start_date"
        android:textColor="@color/black"
        android:textSize="@dimen/size_13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hd_custom_date" />

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_40dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_50dp"
        android:drawableStart="@drawable/ic_date_filter"
        android:drawablePadding="@dimen/dimen_12dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingBottom="@dimen/dimen_30dp"
        android:text="@string/end_date"
        android:textColor="@color/black"
        android:textSize="@dimen/size_13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hd_custom_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@drawable/border_gray"
        android:text="@string/cancel"
        android:elevation="@dimen/size_10sp"
        android:layout_marginEnd="@dimen/dimen_1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_proceed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_proceed"
        android:layout_width="0dp"
        android:elevation="@dimen/size_10sp"
        android:layout_height="54dp"
        android:background="@color/filter_proceed_green"
        android:text="@string/proceed"
        android:textAllCaps="true"
        android:layout_marginStart="@dimen/dimen_1dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>