<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    tools:context=".sales.orderdispatch.CreateShipmentOrderActivity">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/size_12sp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_toolbar_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_12sp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/order_details"
        android:textColor="@color/black"
        android:textSize="@dimen/size_18sp"
        android:shadowColor="@color/analytics_view_drop_shadow_color"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />


    <TextView
        android:id="@+id/tv_step_one"
        android:layout_width="@dimen/size_24sp"
        android:layout_height="@dimen/size_24sp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/white_circle_with_blue_border"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/one"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/size_15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/tv_create_shipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_7dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/create_shipment"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/size_11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_step_one"
        app:layout_constraintStart_toStartOf="@+id/tv_step_one"
        app:layout_constraintTop_toBottomOf="@+id/tv_step_one" />

    <View
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/order_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_step_one"
        app:layout_constraintEnd_toStartOf="@+id/tv_step_two"
        app:layout_constraintStart_toEndOf="@+id/tv_step_one"
        app:layout_constraintTop_toTopOf="@+id/tv_step_one" />


    <TextView
        android:id="@+id/tv_step_two"
        android:layout_width="@dimen/size_24sp"
        android:layout_height="@dimen/size_24sp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/white_circle_with_gray_border"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/two"
        android:textColor="@color/order_gray"
        android:textSize="@dimen/size_15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_step_three"
        app:layout_constraintStart_toEndOf="@+id/tv_step_one"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <View
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/order_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_step_one"
        app:layout_constraintEnd_toStartOf="@+id/tv_step_three"
        app:layout_constraintStart_toEndOf="@+id/tv_step_two"
        app:layout_constraintTop_toTopOf="@+id/tv_step_one" />

    <TextView
        android:id="@+id/tv_step_three"
        android:layout_width="@dimen/size_24sp"
        android:layout_height="@dimen/size_24sp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/white_circle_with_gray_border"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="@color/order_gray"
        android:textSize="@dimen/size_15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_product_list"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/size_24sp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:background="@drawable/cart_item_bg"
        app:layout_constraintBottom_toTopOf="@+id/hd_carry_hd"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_shipment">


        <CheckBox
            android:id="@+id/cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_12sp"
            android:layout_marginTop="@dimen/size_12sp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="@dimen/size_15sp"
            android:paddingEnd="@dimen/size_15sp"
            android:checked="true"
            android:text="@string/select_all_product"
            android:textColor="@color/black"
            android:textSize="@dimen/size_15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:background="@color/ordered_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_select_all" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/dimen_20dp"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            tools:listitem="@layout/item_dispatch_product_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/hd_carry_hd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/size_18sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/do_you_want_to_carry_remaining_order"
        android:textColor="@color/black"
        android:textSize="@dimen/size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cb_yes"/>

    <CheckBox
        android:id="@+id/cb_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/size_16sp"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/yes"
        android:checked="true"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/size_15sp"
        android:layout_marginBottom="@dimen/size_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_checkout"/>

    <CheckBox
        android:id="@+id/cb_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/size_15sp"
        app:layout_constraintStart_toEndOf="@+id/cb_yes"
        app:layout_constraintTop_toTopOf="@+id/cb_yes"
        app:layout_constraintBottom_toBottomOf="@+id/cb_yes" />



    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tv_checkout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:background="@color/filter_proceed_green"
        android:elevation="@dimen/size_10sp"
        android:text="@string/proceed"
        android:textSize="@dimen/size_16sp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>